[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI/upgrade/playerUpgradeBg.png" type="Texture" id=1]
[ext_resource path="res://GUI/GUITitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://GUI/crafting/Button-normal.png" type="Texture" id=3]
[ext_resource path="res://GUI/crafting/Button-hover.png" type="Texture" id=4]
[ext_resource path="res://GUI/crafting/Button-locked.png" type="Texture" id=5]
[ext_resource path="res://GUI/crafting/Button-pressed.png" type="Texture" id=6]
[ext_resource path="res://GUI/Silver.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://crystalCheckTime1.png" type="Texture" id=8]
[ext_resource path="res://GUI/upgrade/PlayerUpgrade.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 1
font_data = ExtResource( 7 )

[node name="PlayerUpgrade" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UpgradePanel" type="NinePatchRect" parent="."]
margin_left = 12.0
margin_top = 8.0
margin_right = 1012.0
margin_bottom = 593.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UpgradeLabel" type="Label" parent="UpgradePanel"]
margin_left = 32.0
margin_top = 10.0
margin_right = 172.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "UPGRADE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgePanel" type="ColorRect" parent="UpgradePanel/UpgradeLabel"]
margin_top = 55.0
margin_right = 933.0
margin_bottom = 138.0
color = Color( 0.498039, 0.498039, 0.498039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeZero" type="TextureButton" parent="UpgradePanel/UpgradeLabel/AgePanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -19.5
margin_right = 170.0
margin_bottom = 20.5
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ageLabelZ" type="Label" parent="UpgradePanel/UpgradeLabel/AgePanel/AgeZero"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -18.5
margin_right = 39.0
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
text = "AGE ZERO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeOne" type="TextureButton" parent="UpgradePanel/UpgradeLabel/AgePanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 187.289
margin_top = -20.3909
margin_right = 347.289
margin_bottom = 19.6091
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ageLabelO" type="Label" parent="UpgradePanel/UpgradeLabel/AgePanel/AgeOne"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -18.5
margin_right = 39.0
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
text = "AGE ONE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeTwo" type="TextureButton" parent="UpgradePanel/UpgradeLabel/AgePanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 582.389
margin_top = -19.5
margin_right = 742.389
margin_bottom = 20.5
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="ageLabelT" type="Label" parent="UpgradePanel/UpgradeLabel/AgePanel/AgeTwo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -18.5
margin_right = 39.0
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
text = "AGE TWO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeThree" type="TextureButton" parent="UpgradePanel/UpgradeLabel/AgePanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 759.637
margin_top = -19.5
margin_right = 919.637
margin_bottom = 20.5
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ageLabelT" type="Label" parent="UpgradePanel/UpgradeLabel/AgePanel/AgeThree"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0947
margin_top = -18.5
margin_right = 44.9053
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
text = "AGE THREE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" type="TextureRect" parent="UpgradePanel/UpgradeLabel/AgePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -41.5
margin_right = 42.5
margin_bottom = 41.5
rect_pivot_offset = Vector2( 41.5, 41.5 )
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnlockPanel" type="ColorRect" parent="UpgradePanel/UpgradeLabel"]
margin_top = 148.0
margin_right = 933.0
margin_bottom = 547.0
color = Color( 0.498039, 0.498039, 0.498039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeEra" type="Label" parent="UpgradePanel/UpgradeLabel/UnlockPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -359.0
margin_right = 359.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CURRENT AGE: NULL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
